/**
 * 商品秒杀服务
 */
syntax = "proto3";

package seckill;

option go_package = "./proto;seckill";

import "google/protobuf/empty.proto";
import "validate/validate.proto";
import "common/req.proto";
import "common/type.proto";

// 秒杀服务接口定义
service Seckill {
	/// 秒杀
	rpc Kill(KillReq) returns (KillReply);
	/// 获取所有秒杀场次
	rpc GetSessionAll(google.protobuf.Empty) returns (SessionsReply);
	/// 获取场次下所有秒杀商品
	rpc GetSessionSkus(SessionIdReq) returns (SkusReply);
	/// 获取商品秒杀详情
	rpc GetSkuDetail(common.SkuIDReq) returns (SkuReply);
}

// 秒杀请求结构
message KillReq {
	int64 sku_id = 1 [(validate.rules).int64.gt = 0]; /// sku id
	int64 address_id = 2 [(validate.rules).int64.gt = 0]; /// 收货地址id
	int64 num = 3 [(validate.rules).int64.gt = 0];	/// sku 数量
	string key = 4 [(validate.rules).string.len = 32]; /// 加密key
}

// 场次id
message SessionIdReq {
	int64 id = 1 [(validate.rules).int64.gt = 0]; /// 场次id
}

// 秒杀响应结构
message KillReply {
	string data = 1; /// 订单号
}

// 秒杀场次响应结构
message SessionsReply {
	repeated common.Session data = 1;
}

// 秒杀商品列表
message SkusReply {
	repeated common.KillSku data = 1;
}

// 秒杀商品信息
message SkuReply {
	common.KillSku data = 1;
}